--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ passwordmanager.qmltypes
 passwordmanager_metatypes.json
 passwordmanager_qmltyperegistrations.cpp
 pass.words
+PasswordManager_resource.rc
